bug fixed (root-ref 의 shortcut 은 무시되어야 한다.)